Fix: func